[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/components/GDQuestLogo.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/theme/panel_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/theme/fonts/font_title_big.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/icons/icon_report.png" type="Texture" id=5]
[ext_resource path="res://ui/screens/end_screen/EndScreen.gd" type="Script" id=6]
[ext_resource path="res://ui/components/FullScreenButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/theme/panel_breadcrumbs.tres" type="StyleBox" id=8]
[ext_resource path="res://addons/SmoothScroll/SmoothScrollContainer.gd" type="Script" id=9]
[ext_resource path="res://icon.png" type="Texture" id=10]
[ext_resource path="res://ui/icons/navigation_outliner.png" type="Texture" id=11]

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 2495, 16 )
theme = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="PanelContainer" parent="Layout"]
margin_right = 1920.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 40 )
custom_styles/panel = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="Layout/TopBar"]
margin_right = 1920.0
margin_bottom = 48.0
custom_constants/margin_right = 12
custom_constants/margin_top = 0
custom_constants/margin_left = 12
custom_constants/margin_bottom = 0

[node name="ToolBarLayout" type="HBoxContainer" parent="Layout/TopBar/MarginContainer"]
margin_left = 12.0
margin_right = 1908.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( -683, 4 )

[node name="OutlinerButton" type="Button" parent="Layout/TopBar/MarginContainer/ToolBarLayout"]
margin_right = 32.0
margin_bottom = 48.0
hint_tooltip = "Open the course index"
mouse_default_cursor_shape = 2
icon = ExtResource( 11 )
flat = true

[node name="Control" type="Control" parent="Layout/TopBar/MarginContainer/ToolBarLayout"]
margin_left = 48.0
margin_right = 1568.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="FullScreenButton" parent="Layout/TopBar/MarginContainer/ToolBarLayout" instance=ExtResource( 7 )]
margin_left = 1584.0
margin_top = 4.0
margin_right = 1624.0
margin_bottom = 44.0

[node name="ReportButton" type="Button" parent="Layout/TopBar/MarginContainer/ToolBarLayout"]
margin_left = 1640.0
margin_right = 1896.0
margin_bottom = 48.0
text = "Report an issue"
icon = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="Layout"]
margin_left = 512.0
margin_top = 64.0
margin_right = 1408.0
margin_bottom = 1080.0
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="ColumnLayout" type="HBoxContainer" parent="Layout/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 876.0
margin_bottom = 996.0
alignment = 1

[node name="MainColumn" type="VBoxContainer" parent="Layout/MarginContainer/ColumnLayout"]
margin_right = 856.0
margin_bottom = 976.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="WelcomeTitle" type="PanelContainer" parent="Layout/MarginContainer/ColumnLayout/MainColumn"]
margin_right = 856.0
margin_bottom = 136.0
custom_styles/panel = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="Layout/MarginContainer/ColumnLayout/MainColumn/WelcomeTitle"]
margin_left = 8.0
margin_top = 8.0
margin_right = 848.0
margin_bottom = 128.0

[node name="Icon" type="TextureRect" parent="Layout/MarginContainer/ColumnLayout/MainColumn/WelcomeTitle/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 820.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="Layout/MarginContainer/ColumnLayout/MainColumn/WelcomeTitle/MarginContainer"]
margin_left = 20.0
margin_top = 40.0
margin_right = 820.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 4 )
text = "That's it... for now!"
align = 1
valign = 1

[node name="MainContent" type="PanelContainer" parent="Layout/MarginContainer/ColumnLayout/MainColumn"]
margin_top = 152.0
margin_right = 856.0
margin_bottom = 976.0
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="Layout/MarginContainer/ColumnLayout/MainColumn/MainContent"]
margin_left = 8.0
margin_top = 8.0
margin_right = 848.0
margin_bottom = 816.0

[node name="ScrollContainer" type="ScrollContainer" parent="Layout/MarginContainer/ColumnLayout/MainColumn/MainContent/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 820.0
margin_bottom = 788.0
scroll_horizontal_enabled = false
script = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="Layout/MarginContainer/ColumnLayout/MainColumn/MainContent/MarginContainer/ScrollContainer"]
margin_right = 800.0
margin_bottom = 441.0
custom_constants/separation = 32

[node name="RichTextLabel" type="RichTextLabel" parent="Layout/MarginContainer/ColumnLayout/MainColumn/MainContent/MarginContainer/ScrollContainer/VBoxContainer"]
margin_right = 800.0
margin_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 100 )
size_flags_horizontal = 6
bbcode_enabled = true
bbcode_text = "Thanks for participating in the beta test.

We hope you enjoyed what's available so far.

We wish we had a lot more to give you already, but creating this app took time. A [i]lot[/i] of time.

The good news is: now we figured out many of the more challenging parts, moving forward, we can shift our focus onto new lessons and practices."
text = "Thanks for participating in the beta test.

We hope you enjoyed what's available so far.

We wish we had a lot more to give you already, but creating this app took time. A lot of time.

The good news is: now we figured out many of the more challenging parts, moving forward, we can shift our focus onto new lessons and practices."
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="Layout/MarginContainer/ColumnLayout/MainColumn/MainContent/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 293.0
margin_right = 800.0
margin_bottom = 441.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 100 )
size_flags_horizontal = 6
bbcode_enabled = true
bbcode_text = "[font=res://ui/theme/fonts/font_title.tres]What's coming next[/font]

We have plans for many more lessons and improvements.

You can find our plan for future releases on our [url=https://github.com/GDQuest/learn-gdscript#roadmap]roadmap[/url]."
text = "What's coming next

We have plans for many more lessons and improvements.

You can find our plan for future releases on our roadmap."
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GDQuestLogo" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.572549, 0.560784, 0.721569, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 86.0
margin_top = -80.0
margin_right = 267.0
margin_bottom = -24.0
